Fix MainMenu Responsivness on smaller screens

--- a/src/index.css
+++ b/src/index.css
@@ -113,7 +113,13 @@ body {
 }
 
 .channel-height {
-    height: 19vh;
+    height: 20vh;
+}
+
+@media (max-height: 700px) {
+    .channel-height {
+        height: 18vh;
+    }
 }
 
 .transparent-border {
@@ -189,26 +195,32 @@ body {
     overflow: hidden; /* Ocultar el contenido extra */
     border-right: 0.1em solid white; /* Barra de escritura */
     white-space: nowrap; /* Evita que el texto salte a la siguiente línea */
-    animation: typing 4s steps(5, end) infinite, blink-caret 0.75s step-end infinite;
+    animation: typing 4s steps(5, end) infinite,
+        blink-caret 0.75s step-end infinite;
     display: inline-block; /* Mostrar en línea */
     position: relative; /* Mantener la posición fija dentro del contenedor */
 }
 
 /* Efecto de escritura y borrado */
 @keyframes typing {
-    0%, 10% {
+    0%,
+    10% {
         width: 0;
     }
-    20%, 30% {
+    20%,
+    30% {
         width: 1ch; /* Mostrar < */
     }
-    40%, 50% {
+    40%,
+    50% {
         width: 2ch; /* Mostrar </ */
     }
-    60%, 70% {
+    60%,
+    70% {
         width: 3ch; /* Mostrar </> */
     }
-    80%, 90% {
+    80%,
+    90% {
         width: 2ch; /* Volver a </ */
     }
     100% {
@@ -218,14 +230,14 @@ body {
 
 /* Cursor parpadeante */
 @keyframes blink-caret {
-    from, to {
+    from,
+    to {
         border-color: transparent;
     }
     50% {
         border-color: white;
     }
 }
-
 
 /* Fondo del footer */
 .mm-footer-bg {
@@ -240,5 +252,3 @@ body {
     height: auto;
     min-height: 322px; /* Altura mínima */
 }
-
-
